[gd_scene load_steps=2 format=3 uid="uid://b8r2pbfow66ih"]

[ext_resource type="Script" uid="uid://ds1orwapqxdbi" path="res://scenes/ui/draft_screen.gd" id="1_dgf36"]

[node name="DraftScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dgf36")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CardsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Card0" type="Button" parent="MarginContainer/VBoxContainer/CardsRow"]
layout_mode = 2

[node name="Card1" type="Button" parent="MarginContainer/VBoxContainer/CardsRow"]
layout_mode = 2

[node name="Card2" type="Button" parent="MarginContainer/VBoxContainer/CardsRow"]
layout_mode = 2

[node name="Card3" type="Button" parent="MarginContainer/VBoxContainer/CardsRow"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
